kadry zmiany przyspieszajace

--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -19,6 +19,7 @@
 
             <ui:define name="content">
                 <p:outputPanel>
+                    <bcf:ajaxs/>
                     <h:form id="formmenu">
                         <p:menubar autoDisplay="true">
                             <p:menuitem icon="pi pi-sliders-h" value="parametry" style="width: 150px" action="Parametry"/>
