--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_definicja.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_definicja.xhtml
@@ -55,7 +55,7 @@
                 <p:commandButton styleClass="buttonnorm" actionListener="#{definicjalistaplacView.createrok}" value="uzupełnij rok" update="display,:DefinicjalistaplacListForm:datalist" rendered="#{definicjalistaplacView.lista.size() gt 0}" />
             </h:form>
             <h:form  styleClass="formadmin" id="DefinicjalistaplacgenerujForm1">
-                <p:commandButton styleClass="buttonnorm" actionListener="#{firmaView.listywszystkie(wpisView.rokWpisu)}" value="generuj rok" update="display,:DefinicjalistaplacListForm:datalist" />
+<!--                <p:commandButton styleClass="buttonnorm" actionListener="#{firmaImportView.listywszystkie(wpisView.rokWpisu)}" value="generuj rok" update="display,:DefinicjalistaplacListForm:datalist" />-->
             </h:form>
         </p:outputPanel>
         <p:outputPanel>
