--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -93,7 +93,7 @@
                                 <h:outputText value="#{wpisView.umowa.stanowisko}"/>
                             </p:panelGrid>
                         </p:panelGrid>
-                        <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.create}" value="#{bundle.Save}" update="display,:NieobecnoscListForm:datalist"/>
+                        <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.create()}" value="#{bundle.Save}" update="display,:NieobecnoscListForm:datalist"/>
                         <p:commandButton value="#{bundle.Cancel}" onclick="NieobecnoscCreateDialog.hide()"/>
                     </h:panelGroup>
                 </h:form>
@@ -123,7 +123,7 @@
                         <p:ajax event="change"  partialSubmit="true" />
                     </p:selectBooleanCheckbox>
                 </p:panelGrid>
-                <p:panel header="Lista nieobecności #{wpisView.pracownik.nazwiskoImie}">
+                <p:panel header="Lista nieobecności #{wpisView.pracownik.nazwiskoImie} - angaz od #{wpisView.angaz.rokMc}">
                     <p:dataTable id="datalist" value="#{nieobecnoscView.lista}" var="itemNieob" 
                                  selection="#{nieobecnoscView.selectedlista}" rowIndexVar="indexn" sortMode="multiple"
                                  rowKey="#{itemNieob.id}"  sortBy="#{itemNieob.dataod}"
