--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -329,12 +329,18 @@
             </p:tab>
             <p:tab title="Przyporządkowanie składników do listy płac">
                 <h:form id="ListaPlacPrzypForm">
-                    <p:selectOneMenu value="#{rodzajlistyplacRodzajwynagrodzeniaView.rodzajlistyplacselected}" converter="#{rodzjalistyplacConverter}" autoWidth="false" style="width: 280px;margin-left: 10px;" filter="true" filterMatchMode="contains" requiredMessage="Wybierz rodzaj listy płac">
+                    <p:selectOneMenu value="#{rodzajlistyplacRodzajwynagrodzeniaView.rodzajlistyplacselected}" converter="#{rodzjalistyplacConverter}" autoWidth="false" style="width: 320px;margin-left: 10px;" filter="true" filterMatchMode="contains" requiredMessage="Wybierz rodzaj listy płac">
                         <f:selectItem itemLabel="wybierz" noSelectionOption="true" />
                         <f:selectItems value="#{rodzajlistyplacRodzajwynagrodzeniaView.rodzajlistyplaclist}" var="elem" itemLabel="#{elem.nazwa}" itemValue="#{elem}"/>
                         <p:ajax event="itemSelect" listener="#{rodzajlistyplacRodzajwynagrodzeniaView.pobierzpary}" update="ListaPlacPrzypForm:datalistra" partialSubmit="true"/>
                     </p:selectOneMenu>
                     <p:outputPanel>
+                         <style>
+                            .ui-picklist .ui-picklist-list{
+                                width: 350px !important;
+                            }
+
+                        </style>
                         <p:pickList id="datalistra" value="#{rodzajlistyplacRodzajwynagrodzeniaView.picklista}" var="rodzajitem" itemLabel="#{rodzajitem.opisskrocony}" itemValue="#{rodzajitem}" style="margin-left: 10px;margin-top: 10px;"
                                     showCheckbox="true" converter="#{rodzajwynagrodzeniaConverter}">
                             <p:ajax event="transfer" listener="#{rodzajlistyplacRodzajwynagrodzeniaView.onTransfer}"/>
