--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -236,7 +236,7 @@
             <p:rowExpansion>
                 <p:dataTable id="datalist1" value="#{itempasek.getPobierzskladniki(pasekwynagrodzenView.wybranalistaplac)}" var="itempasekszcz"
                              rowIndexVar="indexpasekszcz"
-                             style="height: 200px; overflow-y: scroll;width: 1420px;"
+                             style="height: 200px; overflow-y: scroll;width: 1460px;"
                              >
                     <p:column style="text-align: center;" headerText="lp" width="40">
                         <h:outputText value="#{itempasekszcz.lp}"/>
@@ -270,6 +270,9 @@
                     </p:column>
                     <p:column headerText="umowa" width="70">
                         <bcf:outputpl value="#{itempasekszcz.wynagrodzeniezmienna}"/>
+                    </p:column>
+                    <p:column headerText="st/h" width="40" >
+                        <bcf:outputpl value="#{itempasekszcz.stawkanagodzinewaluta}"/>
                     </p:column>
                     <p:column headerText="st/h" width="40" >
                         <bcf:outputpl value="#{itempasekszcz.stawkanagodzine}"/>
