--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -54,7 +54,7 @@
                             </p:submenu>
                             <p:menuitem icon="pi pi-file-pdf" value="PIT11" style="width: 150px" action="Pit"/>
                             <p:menuitem icon="pi pi-file-excel" value="PIT4" style="width: 150px" action="Pit4"/>
-                            <p:menuitem icon="pi pi-chart-bar" value="statystyka" style="width: 150px" action="Statystyka"/>
+                            <p:submenu icon="pi pi-print" label="wydruki" style="width: 150px"><p:menuitem icon="pi pi-ellipsis-v" value="zaświadczenia" style="width: 150px" action="wydruki"/></p:submenu><p:menuitem icon="pi pi-chart-bar" value="statystyka" style="width: 150px" action="Statystyka"/>
 
 
                         </p:menubar>
