--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -181,14 +181,17 @@
                         <p:column>
                             <h:outputText value="prac zdrowotne"/>
                         </p:column>
-                        <p:column>
+<!--                        <p:column>
                             <h:outputText value="prac zdrow. do odliczenia"/>
-                        </p:column>
+                        </p:column>-->
                         <p:column>
-                            <h:outputText value="prac zdrow. do potrąc."/>
+                            <h:outputText value="zdrow. do potrąc."/>
                         </p:column>
                         <p:column>
                             <h:outputText value="podatek dochodowy"/>
+                        </p:column>
+                        <p:column>
+                            <h:outputText value="podatek zagranica"/>
                         </p:column>
                         <p:column>
                             <h:outputText value="netto"/>
@@ -239,14 +242,17 @@
                         <p:column>
                             <bcf:outputpl value="#{itempasek.praczdrowotne}"/>
                         </p:column>
-                        <p:column>
+<!--                        <p:column>
                             <bcf:outputpl value="#{itempasek.praczdrowotnedoodliczenia}" rendered="#{itempasek.rokI lt 2022}"/>
-                        </p:column>
+                        </p:column>-->
                         <p:column>
                             <bcf:outputpl value="#{itempasek.praczdrowotnedopotracenia}"/>
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.podatekdochodowy}"/>
+                        </p:column>
+                        <p:column>
+                            <bcf:outputpl value="#{itempasek.podatekdochodowyzagranica}"/>
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.nettoprzedpotraceniami}"/>
@@ -269,56 +275,60 @@
             <p:rowExpansion>
                 <p:dataTable id="datalist" value="#{itempasek.getPobierzskladniki(pasekwynagrodzenView.wybranalistaplac)}" var="itempasekszcz"
                              rowIndexVar="indexpasekszcz"
-                             style="height: 200px; overflow-y: scroll;width: 1460px;"
+                             style="height: 200px; overflow-y: scroll;width: 1490px;"
                              >
-                    <p:column style="text-align: center;" headerText="lp" width="40">
+                    <p:column style="text-align: center;color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};" headerText="lp" width="40">
                         <h:outputText value="#{itempasekszcz.lp}"/>
                     </p:column>
-                   <p:column headerText="kod" width="25" style="text-align: center;">
+                   <p:column headerText="kod" width="25" style="text-align: center;color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.kod}"/>
                     </p:column>
-                    <p:column headerText="zus" width="25" style="text-align: center;">
+                    <p:column headerText="zus" width="25" style="text-align: center;color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.kodzus}"/>
                     </p:column>
-                    <p:column headerText="składnik" width="320">
+                    <p:column headerText="składnik" width="320" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.nazwa}"/>
                     </p:column>
-                    <p:column headerText="imp.uwagi" width="60" style="text-align: center;">
+                    <p:column headerText="imp.uwagi" width="60" style="text-align: center;color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="za urlop" rendered="#{itempasekszcz.urlopSP}"/>
                          <h:outputText value="redukcja" rendered="#{itempasekszcz.redukcjaSP}"/>
                          <h:outputText value="potrącenie" style="color:red;" rendered="#{itempasekszcz.potracenie}"/>
+                         <h:outputText value="#{itempasekszcz.procentzwolnienia}%"  rendered="#{itempasekszcz.procentzwolnienia ne 0.0}"/>
                     </p:column>
-                    <p:column headerText="dni" width="60">
+                    <p:column headerText="dni" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.dniobowiazku}/#{itempasekszcz.dniprzepracowane}"/>
                     </p:column>
-                    <p:column headerText="godziny" width="60">
+                    <p:column headerText="godziny" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.godzinyobowiazku}/#{itempasekszcz.godzinyprzepracowane}"/>
                     </p:column>
-                    <p:column headerText="data od" width="60">
+                    <p:column headerText="data od" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.dataod}"/>
                     </p:column>
-                    <p:column headerText="data do" width="60">
+                    <p:column headerText="data do" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.datado}"/>
                     </p:column>
-                    <p:column headerText="umowa" width="70">
+                    <p:column headerText="waluta" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
+                        <bcf:outputpl value="#{itempasekszcz.wynagrodzeniezmiennawaluta}"/>
+                    </p:column>
+                    <p:column headerText="pln" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.wynagrodzeniezmienna}"/>
                     </p:column>
-                    <p:column headerText="st/h" width="40" >
+                    <p:column headerText="st/h" width="40"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.stawkanagodzinewaluta}"/>
                     </p:column>
-                     <p:column headerText="st/h" width="40" >
+                     <p:column headerText="st/h" width="40"  style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.stawkanagodzine}"/>
                     </p:column>
-                    <p:column headerText="st/dz" width="60">
+                    <p:column headerText="st/dz" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.stawkadzienna}"/>
                     </p:column>
-                    <p:column headerText="kwota" width="70">
+                    <p:column headerText="kwota" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.kwota}"/>
                     </p:column>
-                    <p:column headerText="redukcja" width="70">
+                    <p:column headerText="redukcja" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.redukcja}"/>
                     </p:column>
-                    <p:column headerText="waluta" width="30">
+                    <p:column headerText="waluta" width="30" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <bcf:outputpl value="#{itempasekszcz.waluta}"/>
                     </p:column>
                 </p:dataTable>
