--- a/kadry/src/main/webapp/wskazniki/sub/pfron.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/pfron.xhtml
@@ -9,8 +9,11 @@
     >
     <h:form styleClass="formcentrum">
         
-        <p:panel style="margin-top: 20px;" header="PFRON stan zatrudnienia"> 
-            
+        <p:panel style="margin-top: 20px;" header="PFRON stan zatrudnienia" id="pnlPrint"> 
+
+            <p:commandButton value="Drukuj" type="button" icon="pi pi-print" styleClass="shadow-1 mb-3">
+                <p:printer target="pnlPrint"/>
+            </p:commandButton>
             <p:panelGrid columns="4">
                 <h:outputText value="firma" style="color: green;"/>
                 <h:outputText value="#{wpisView.firma.nazwa}" style="color: green;"/>
@@ -28,7 +31,7 @@
                 <p:dataTable id="datalist" value="#{wskaznikPfronView.lista}" var="item"
                                  rowIndexVar="index"
                                  rowKey="#{item.dzien}" sortBy="#{item.dzien}"
-                                 style="height: 500px; overflow-y: scroll; width: 650px;"
+                                 style="height: 800px; overflow-y: scroll; width: 650px;"
                                  emptyMessage="nie pobrano danych"
                                  >
                         <p:column width="10">
