oddeelegowanie po nowemu

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -88,6 +88,7 @@
                         </p:column>
                         <p:column>
                             <h:outputText value="nierezydent" rendered="#{itempasek.nierezydent}" style="color: green;"/>
+                            <h:outputText value="przekroczenie" rendered="#{itempasek.przekroczenieoddelegowanie}" style="color: green;"/>
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.bruttozuskraj}" />
