--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_podatek.xhtml
@@ -12,7 +12,7 @@
         <p:dataTable id="datalist3" value="#{pasekwynagrodzenView.lista}" var="itempasekpod" emptyMessage="Brak listy za dany okres"  styleClass="listaplac"
                      selectionMode="single" selection="#{pasekwynagrodzenView.selectedlista}" rowIndexVar="indexpasekpod"
                      rowKey="#{itempasekpod.kalendarzmiesiac.id}" sortBy="#{itempasekpod.nazwiskoImie}"
-                     style="height: 500px; overflow-y: scroll; width: 1100px;"
+                     style="height: 430px; overflow-y: scroll; width: 1170px;"
                      >
             <p:column width="10">
                 <h:outputText value="#{indexpasekpod+1}"/>
@@ -20,14 +20,18 @@
             <p:column width="150" headerText="nazwisko i imie">
                 <h:outputText value="#{itempasekpod.nazwiskoImie}"/>
             </p:column>
-            <p:column width="70" headerText="data ur.">
+            <p:column width="70" headerText="data ur." style="text-align: center;">
                 <h:outputText value="#{itempasekpod.angaz.pracownik.dataurodzenia}"/>
+            </p:column>
+            <p:column width="50" headerText="przekr" style="text-align: center;">
+                <h:outputText value="#{itempasekpod.angaz.przekroczenierok}"/>
             </p:column>
             <p:column width="70" headerText="data wypłaty" style="text-align: center;">
                 <h:outputText value="#{itempasekpod.datawyplaty}"/>
             </p:column>
             <p:column headerText="wiek" width="20" style="text-align: center;">
-                <h:outputText value="#{itempasekpod.lata}" rendered="#{itempasekpod.lata gt 0}"/>
+                <h:outputText value="#{itempasekpod.lata}" rendered="#{itempasekpod.lata gt 26}"/>
+                <h:outputText value="#{itempasekpod.lata}" rendered="#{itempasekpod.lata gt 0 and itempasekpod.lata lt 27}" style="color: green;"/>
             </p:column>
             <p:column headerText="podst. PIT Polska">
                 <bcf:outputpl value="#{itempasekpod.podstawaopodatkowania}"/>
@@ -37,6 +41,9 @@
             </p:column>
             <p:column headerText="podstawa pod. zagr.">
                 <bcf:outputpl value="#{itempasekpod.podstawaopodatkowaniazagranica}"/>
+            </p:column>
+            <p:column headerText="skład. oddeleg.">
+                <bcf:outputpl value="#{itempasekpod.oddelegowaniewaluta}"/>
             </p:column>
             <p:column headerText="kurs">
                 <bcf:outputpl value="#{itempasekpod.kurs}"/>
