--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_prosta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_prosta.xhtml
@@ -189,7 +189,8 @@
                         <h:outputText value="za urlop" rendered="#{itempasekszcz.urlopSP}"/>
                          <h:outputText value="redukcja" rendered="#{itempasekszcz.redukcjaSP}"/>
                          <h:outputText value="potrącenie" style="color:red;" rendered="#{itempasekszcz.potracenie}"/>
-                          <h:outputText value="#{itempasekszcz.procentzwolnienia}%"  rendered="#{itempasekszcz.procentzwolnienia ne 0.0}"/>
+                          <h:outputText value="#{itempasekszcz.procentzwolnienia}%,"  rendered="#{itempasekszcz.procentzwolnienia ne 0.0}"/>
+                          <h:outputText value="#{itempasekszcz.uwagi}" rendered="#{itempasekszcz.uwagi ne null}"/>
                     </p:column>
                     <p:column headerText="dni" width="60" style="color: #{itempasekszcz.kwota eq 0.0?'grey':'initial'};">
                         <h:outputText value="#{itempasekszcz.dniobowiazku}/#{itempasekszcz.dniprzepracowane}"/>
